<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText android:id="@id/username" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="96.0dip" android:hint="@string/prompt_email" android:selectAllOnFocus="true" android:inputType="textEmailAddress" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:id="@id/password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/prompt_password" android:selectAllOnFocus="true" android:inputType="textPassword" android:imeOptions="actionDone" android:imeActionLabel="@string/action_register" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/username" />
    <EditText android:id="@id/password2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:hint="@string/prompt_password2" android:selectAllOnFocus="true" android:inputType="textPassword" android:imeOptions="actionDone" android:imeActionLabel="@string/action_register" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/username" />
    <Button android:layout_gravity="start" android:id="@id/register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="64.0dip" android:text="@string/action_register" android:layout_marginStart="48.0dip" android:layout_marginEnd="48.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/password" app:layout_constraintVertical_bias="0.2" />
    <ProgressBar android:layout_gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="64.0dip" android:layout_marginBottom="64.0dip" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/password" app:layout_constraintStart_toStartOf="@id/password" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>